--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 #root {
-  max-width:100%;
-  height: 100%;
+  width:100vw;
+  height: 100vh;
   margin: 0 auto;
   /* padding: 2rem; */
   /* text-align: center; */
